--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -2,7 +2,7 @@
 
 * {
 	outline: none;
-	color: "white";
+	color: #DDD;
 	font-family: "Open Sans";
 	font-size: 12px;
 	font-weight: 400;
@@ -36,7 +36,7 @@ QDialog {
 
 QTableView {
 	border: 0px;
-	color: "white";
+	color: #DDD;
 	selection-background-color: "steelblue";
 	background: "transparent"
 }
