--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -38,10 +38,10 @@ QListView {
 }
 
 /* Hide horizontal scrollbars permanently */
-QListView QScrollBar {
+/*QListView QScrollBar {
 	height: 0px;
 	width: 0px;
-}
+}*/
 
 QPushButton {
 	width: 30px;
@@ -115,6 +115,32 @@ QPushButton:disabled {
 QPushButton[highlight="true"] {
 	border: 1px solid white;
 }
+
+ QScrollBar:vertical {
+     border: none;
+     background: transparent;
+     width: 10px;
+     margin: 0;
+ }
+ QScrollBar::handle:vertical {
+     background: #333;
+     border-radius: 5px;
+     min-height: 20px;
+ }
+ QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
+     height: 0px;
+ }
+ 
+ QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
+     border: 1px solid #444;
+     width: 3px;
+     height: 3px;
+     background: white;
+ }
+
+ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+     background: none;
+ }
 
 /* Specific CSS */
 
