Starting work on Section implementation (experimental)

--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -37,6 +37,11 @@ QListView {
 	background: "transparent"
 }
 
+QTreeView {
+	border: 0px;
+	background: "transparent"
+}
+
 QPushButton {
 	width: 27px;
 	height: 27px;
