--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -3,12 +3,19 @@
 * {
 	outline: none;
 	color: #DDD;
-
+    font-family: "Open Sans";
 	background-position: center center;
 	background-repeat: no-repeat;
 }
 
 /* General CSS */
+
+QWidget {
+	background: #555;
+	background-position: center center;
+	background-repeat: no-repeat;
+	font-size: 12px;
+}
 
 QMenu {
     background-color: #555; /* sets background of the menu */
@@ -50,6 +57,8 @@ QPushButton {
 	font-family: "FontAwesome";
 	font-size: 11pt;
 	color: white;
+	padding: 0px;
+    outline: none;
 }
 
 QPushButton:pressed {
@@ -66,10 +75,10 @@ QPushButton:disabled {
 }
 
 QTextEdit, QLineEdit {
-	background: "#555";
-	border: 1px solid "#333";
+	background: #555;
+	border: 1px solid #333;
 	font-size: 9pt;
-	color: "#fff";
+	color: #fff;
 }
 
 QCheckBox {
@@ -167,12 +176,13 @@ QToolTip {
 	width: 65px;
 	height: 40px;
 	border: 0px solid "transparent";
-	border-bottom: 3px solid "transparent";
 	background-repeat: no-repeat;
 	background-position: center center;
+	image: none;
 }
 
 #Header QRadioButton:checked {
+	padding: 0px;
 	background-color: rgba(255, 255, 255, 20);
 	border-bottom: 3px solid "lightblue";
 }
@@ -181,6 +191,10 @@ QToolTip {
 	padding: 10px;
 	border: 1px solid "#333";
 	background: "#444";
+}
+
+#Body QWidget {
+	background: #444;
 }
 
 #Header #ArtistTab {
@@ -219,6 +233,7 @@ QToolTip {
 }
 
 #Footer {
+	background: #555;
 	min-height: 43px;
 }
 
@@ -232,10 +247,10 @@ QToolTip {
 	margin: 5px;
 	margin-bottom: 0px;
 	padding: 5px;
+	background: #444;
 }
 
 #CommentBox {
-	background: #444;
 	selection-background-color: #222;
 }
 
