--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -59,22 +59,6 @@ QPushButton {
 	padding: 0px;
 }
 
-QPushButton:pressed:hover {
-	color: #3784c5;
-	background: #444;
-}
-
-QPushButton:hover {
-	background: #505050;
-	border: 2px solid #3784c5;
-}
-
-QPushButton:disabled {
-	border: 1px solid #888;
-	background: #666;
-	color: #999;
-}
-
 QTextEdit, QLineEdit {
 	background: #555;
 	border: 1px solid #333;
@@ -232,8 +216,6 @@ QToolButton:hover {
 }
 
 #ButtonWithMenu {
-	width: 27px;
-	height: 27px;
 	background: #555;
 	border: 1px solid #fff;
 	border-radius: 4px;
@@ -271,8 +253,38 @@ QToolButton:hover {
 	background-color: #AA5050
 }
 
+#Footer QPushButton {
+	background: #555;
+	border: 1px solid #aaa;
+	border-radius: 4px;
+	font-family: "FontAwesome";
+	font-size: 11pt;
+	color: white;
+	padding: 0px;
+}
+
+#Footer QPushButton:pressed:hover {
+	color: #3784c5;
+	background: #444;
+}
+
+#Footer QPushButton:hover {
+	background: #505050;
+	border: 2px solid #3784c5;
+}
+
+#Footer QPushButton:disabled {
+	border: 1px solid #888;
+	background: #666;
+	color: #999;
+}
+
 #ClosingPlaceholder {
 	background: rgba(0, 0, 0, 50);
+}
+
+#CommentIntentWidget {
+	background: transparent;
 }
 
 #CommentBox, #CommentPlaceholder {
@@ -286,12 +298,16 @@ QToolButton:hover {
 	selection-background-color: #222;
 }
 
+#CommentBox:disabled, #CommentPlaceholder:disabled, #IntentBox:disabled {
+	background: #555;
+}
+
 #CommentPlaceholder {
 	color: #888
 }
 
 #IntentBox {
-    background-color: #444;
+    background: #444;
 	font-size: 8pt;
 	padding: 5px;
     min-width: 75px;
@@ -305,6 +321,10 @@ QToolButton:hover {
 
 #IntentBox::down-arrow {
 	image: url("/img/down_arrow.png");
+}
+
+#IntentBox::down-arrow:disabled {
+	image: url();
 }
 
 #Details {
