--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -348,44 +348,85 @@ QToolButton:hover {
 	image: url();
 }
 
-#Details {
-	width: 20px;
-	background: #333;
-	border: 1px solid #222;
+#TerminalView {
+	background-color: transparent;
 }
 
-#Details QLabel {
-	font-size: 8pt;
+#TerminalView:item {
+	background-color: transparent;
 }
 
-#Details #Header {
-	background: #444;
-	border: 1px solid #222;
+#TerminalView:hover {
+	background-color: transparent;
 }
 
-#Details #Body {
-	background: transparent;
+#TerminalView:selected {
+	background-color: transparent;
 }
 
-#Details #Heading {
-	font-size: 9pt;
-	font-weight: bold;
+#TerminalView QLabel {
+	padding:3px;
+	color: #aaa;
+	border-radius: 7px;
+	border-color: #222;
+	border-style: solid;
+	border-width: 2px;
+	background-color: #333;
 }
 
-#Details #Subheading {
-	background: transparent;
+#TerminalView QLabel:hover {
+	background-color: #353535;
 }
 
-#Details #Timestamp {
-	color: #999;
+#TerminalView QLabel:selected {
+	background-color: #303030;
 }
 
-#Details #Text {
-	font-family: "Courier";
-	font-size: 9pt;
+#ExpandableWidgetContent {
+	border: none;
+	background-color: #232323;
+	color:#eeeeee;
 }
 
-#Details #Icon {
-	font-family: "FontAwesome";
-	font-size: 15pt;
+#EllidableLabel {
+	font-size: 16pt;
+	font-style: bold;
+	font-weight: 50;
+}
+
+#PerspectiveWidgetContent{
+	padding: 0px;
+}
+
+#PerspectiveLabel {
+	background-color: transparent;
+}
+
+#PerspectiveIndicator {
+	font-size: 16pt;
+	font-style: bold;
+	font-weight: 50;
+	padding: 5px;
+	background-color: #ffffff;
+	color: #333333;
+}
+
+#PerspectiveIndicator[state="warning"] {
+	background-color: #ffffff;
+	color: #333333;
+}
+
+#PerspectiveIndicator[state="active"] {
+	background-color: #99CEEE;
+	color: #ffffff;
+}
+
+#PerspectiveIndicator[state="error"] {
+	background-color: #cc4a4a;
+	color: #ffffff;
+}
+
+#PerspectiveIndicator[state="ok"] {
+	background-color: #69a567;
+	color: #ffffff;
 }
