--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -412,8 +412,8 @@ QToolButton:hover {
 }
 
 #PerspectiveIndicator[state="warning"] {
-	background-color: #ffffff;
-	color: #333333;
+	background-color: #ff9900;
+	color: #ffffff;
 }
 
 #PerspectiveIndicator[state="active"] {
