fixed toolbutton's borders in expandable widget

--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -163,10 +163,11 @@ QToolButton {
 	margin: 0px;
 	padding: 0px;
 	border-radius: 0px;
+	border: none;
 }
 
 QToolButton:hover {
-	background-color: #666;
+	color: #fff;
 }
 
 /* Specific CSS */
