make sure font family has full name

--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -308,7 +308,7 @@ QToolButton {
 }
 
 #CommentBox, #CommentPlaceholder {
-	font-family: Open Sans;
+	font-family: "Open Sans";
 	font-size: 8pt;
 	padding: 5px;
 	background: #444;
